--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,14 @@ jobs:
       - name: Installing Node Modules
         run: npm install
 
-      - name: Running Test Cases
+      # - name: Running Test Cases
+      #   run: npm test
+
+  test:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Running the test cases
         run: npm test
