Check list in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         run: pwd
 
       - name: Looking at the list
-        run: ls -l
+        run: ls
 
       - name: Checking Npm versions
         run: npm -v
