--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,13 +19,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      # - uses: actions/checkout@v3
-      # - name: Use Node.js ${{ matrix.node-version }}
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     # node-version: ${{ matrix.node-version }}
-      #     node-version: 18.x
-      #     cache: "npm"
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          # node-version: ${{ matrix.node-version }}
+          node-version: 18.x
+          cache: "npm"
 
       - name: Installing Node Modules
         run: npm install
